update and fix template

--- a/src/properties/assets/themes/default/template.html
+++ b/src/properties/assets/themes/default/template.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <base href="/">
+    <title>[Template]</title>
 </head>
-<body>
-    <div id="app" class="container"></div>
-</body>
+<body id="app"></body>
 </html>
