update header and add summary page header

--- a/src/properties/assets/themes/bracket-plus/template.html
+++ b/src/properties/assets/themes/bracket-plus/template.html
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="/assets/css/ripple10-style.css?updateversion=true"> -->
     </head>
 
-    <body id="app" class="fixed-leftside pace-done fixed-header sidebar-sm">
+    <body id="app">
         <!-- content here -->
     </body>
 
